# work_pyramid

./: README.md  pyproject.toml
alchemy_example/: .coveragerc  MANIFEST.in  README.txt  development.ini  production.ini  pytest.ini  setup.py
alchemy_example/alchemy_example/: tests.py
alchemy_example/alchemy_example.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
alchemy_example/alchemy_example/models/: __init__.py
alchemy_example/alchemy_example/templates/: layout.jinja2  mytemplate.jinja2
alchemy_example/alchemy_example/views/: default.py
cc_starter/: setup.py
debugtoolbar/: setup.py
debugtoolbar/tutorial.egg-info/: PKG-INFO  requires.txt
functional_testing/tutorial/: tests.py
functional_testing/tutorial.egg-info/: requires.txt
ini/: setup.py
templating/: development.ini  setup.py
templating/tutorial/: tests.py
tests/: test_work_pyramid.py
unit_testing/: setup.py
unit_testing/tutorial/: tests.py
unit_testing/tutorial.egg-info/: requires.txt
views/: development.ini  setup.py
views/tutorial/: tests.py  views.py
work_pyramid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
