[tool.poetry]
name = "work_pyramid"
version = "0.1.0"
description = ""
authors = ["Yuki Takino <takino@jsl.co.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
pyramid = "^1.10.4"
sqlalchemy = "^1.3.13"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
