[tool.poetry]
name = "work_pyramid"
version = "0.1.0"
description = ""
authors = ["Yuki Takino <takino@jsl.co.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
waitress = "^1.4.2"
pyramid = "^1.10.4"
cookiecutter = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
